--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 werkzeug==2.0.3
-flask==2.1.2
-flask-restful
-gunicorn 
-numpy  
-tensorflow 
+Flask==2.1.2
+Flask_RESTful==0.3.9
+numpy==1.22.1
+tensorflow==2.9.1
+gunicorn
+
+
+
+
+
